getting pic from the gallery- with bugs

--- a/app/pages/report-case/report-case.scss
+++ b/app/pages/report-case/report-case.scss
@@ -3,3 +3,15 @@
     height: 40%;
     border-radius: 25px;
 }
+
+#pic {
+    height: 56px;
+}
+
+#close {
+    position: absolute;
+    height: 12%;
+    width: 4%;
+    top: 8px;
+    right: 16px;
+}
