--- a/app/pages/report-case/report-case.scss
+++ b/app/pages/report-case/report-case.scss
@@ -1,6 +1,15 @@
-#picture img {
-    width: 40%;
-    height: 40%;
-    border-radius: 25px;
+#cardImage {
+    margin: auto;
+    width: 70%;
+    height: 70%;
+    border-radius: 15px;
 }
 
+ion-select {
+    max-width: 100% !important;
+}
+
+#comments {
+    text-align: right !important;
+    float: right;
+}
