Added page detail case

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -11,8 +11,16 @@
 
 @import "../pages/home/home";
 
-@import "../pages/report-case/report-case";
-
-@import "../pages/user/user";
+@import "../pages/login/login";
 
 @import "../pages/maps/maps";
+
+@import "../pages/push/push";
+
+@import "../pages/register-user/register-user";
+
+@import "../pages/report-case/report-case";
+
+@import "../pages/tabs/tabs";
+
+@import "../pages/user/user";
