--- a/app/pages/cases/cases.scss
+++ b/app/pages/cases/cases.scss
@@ -3,5 +3,15 @@
 }
 
 .content-padding {
-    padding: 100px;
+    padding: 12px;
+}
+
+.box-image-empty {
+    background-color: #ddd;
+    width: 100%;
+    height: 200px;
+}
+
+.text-bold {
+    font-weight: bold;
 }
