main map with all cases - different pins for type cases

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -9,7 +9,7 @@
 
 @import "../pages/cases/cases";
 
-@import "../pages/home/home";
+@import "../pages/main/main";
 
 @import "../pages/report-case/report-case";
 
