--- a/app/pages/cases/cases.scss
+++ b/app/pages/cases/cases.scss
@@ -15,3 +15,12 @@
 .text-bold {
     font-weight: bold;
 }
+
+.scroll {
+    height: 100%;
+}
+
+#route-map {
+    width: 100%;
+    height: 100%;
+}
