--- a/app/pages/cases/cases.scss
+++ b/app/pages/cases/cases.scss
@@ -24,3 +24,18 @@
     width: 100%;
     height: 100%;
 }
+
+.box-content-map {
+    width: 100%;
+    height: 400px;
+}
+
+.box-content-qnt-cases {
+    padding: 10px;
+    width: 100%;
+    height: 70px;
+    background-color: steelblue;
+    color: mintcream;
+    text-align: center;
+    margin-bottom: 10px;
+}
