--- a/app/theme/app.variables.scss
+++ b/app/theme/app.variables.scss
@@ -26,8 +26,8 @@
 // are different per mode.
 
 $colors: (
-  primary:    #FE4365,
-  secondary:  #32db64,
+  primary:    #fc7202,
+  secondary:  #fcbc32,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
