--- a/app/pages/home/home.scss
+++ b/app/pages/home/home.scss
@@ -2,3 +2,20 @@
     width:100%;
     height:100%;
 }
+
+#legend {
+  background: white;
+  padding: 10px;
+  top: 5px !important;
+  right: 5px !important;
+}
+.display-flex {
+  display: flex;
+}
+.legend-box {
+  width: 10px;
+  height: 10px;
+  border: 1px solid;
+  margin-top: 2px;
+  margin-right: 5px;
+}
