--- a/app/pages/login/login.scss
+++ b/app/pages/login/login.scss
@@ -1,5 +1,14 @@
 .login {
-    
+    background-image: url("../../img/background.png");
 }
 
-
+.div-cadastro {
+background:#333;
+width:450px;
+margin: auto;
+padding:10px;
+text-align:center;
+-moz-border-radius:7px;
+-webkit-border-radius:7px;
+ border-radius:7px;
+}
