--- a/app/pages/home/home.scss
+++ b/app/pages/home/home.scss
@@ -3,11 +3,15 @@
     height:100%;
 }
 
+.text-bold {
+  font-weight: bold;
+}
+
 #legend {
   background: white;
   padding: 10px;
-  top: 5px !important;
-  right: 5px !important;
+  bottom: 15px !important;
+  right: 45px !important;
 }
 .display-flex {
   display: flex;
@@ -18,4 +22,17 @@
   border: 1px solid;
   margin-top: 2px;
   margin-right: 5px;
+}
+
+#closeYou {
+  background-color: rgba(10,23,55,0.5);
+  padding: 10px;
+  top: 5px !important;
+  display: flex;
+  width: 220px;
+  height: 40px;
+  margin-top: 2px;
+  margin-right: 5px;
+  font-size: 18px;
+  color: #fff;
 }
