--- a/app/pages/cases/cases.scss
+++ b/app/pages/cases/cases.scss
@@ -1,5 +1,5 @@
 .cases {
-    
+    background-color: #fcfaf7;
 }
 
 #mapAllCases {
@@ -91,4 +91,14 @@
   border: 1px solid;
   margin-top: 2px;
   margin-right: 5px;
+}
+
+.div-list {
+    margin: 20px;
+}
+
+.div-list h2 {
+    font-size: 18px;
+    color: #fc7202;
+    font-weight: 600;
 }
