--- a/app/pages/info/info.scss
+++ b/app/pages/info/info.scss
@@ -1,3 +1,14 @@
-.indent {
-    text-indent: 4em;
+p {
+    text-indent: 2em;
+    text-align: justify;
+}
+figure {
+    text-align: center; 
+}
+
+#infoPage {
+    margin: 15px;
+}
+.figure-dengue {
+    margin: auto;
 }
