--- a/app/pages/cases/detail-case.scss
+++ b/app/pages/cases/detail-case.scss
@@ -1,4 +1,4 @@
 #imgDetail{
-    weight: 180px !important;
-    height: 180px !important;
+    width: 100px !important;
+    height: 100px !important;
 }
