--- a/app/pages/cases/graphs-cases.scss
+++ b/app/pages/cases/graphs-cases.scss
@@ -29,3 +29,8 @@ tr:nth-child(even){background-color: #f2f2f2}
  .firstTd {
      width: 30% !important;
  }
+/* 
+ #chart {
+     height: 100%;
+     width: 100%;
+ }*/
